contact-us/styling.css
#titre {
    display: block;
}
.row {
    display: flex;
    justify-content: space-between;
}
.button {
    background-color: #f8ac29;
    color: #1f2121;
    padding: 5px 25px;
    border-radius: 25px;
    margin: 5px 25px;
    display: inline-block;
    width: 45%;
    text-align: center;
}

